@@ -1,6 +1,6 @@
 
 /*
- * $Id: store_dir_aufs.cc,v 1.47 2002/07/21 00:25:45 hno Exp $
+ * $Id: store_dir_aufs.cc,v 1.48 2002/08/09 10:57:44 robertc Exp $
  *
  * DEBUG: section 47    Store Directory Routines
  * AUTHOR: Duane Wessels
@@ -87,8 +87,8 @@ static StoreEntry *storeAufsDirAddDiskRestore(SwapDir * SD, const cache_key * ke
     time_t timestamp,
     time_t lastref,
     time_t lastmod,
-    u_num32 refcount,
-    u_short flags,
+    u_int32_t refcount,
+    u_int16_t flags,
     int clean);
 static void storeAufsDirRebuild(SwapDir * sd);
 static void storeAufsDirCloseTmpSwapLog(SwapDir * sd);
@@ -783,8 +783,8 @@ storeAufsDirAddDiskRestore(SwapDir * SD, const cache_key * key,
     time_t timestamp,
     time_t lastref,
     time_t lastmod,
-    u_num32 refcount,
-    u_short flags,
+    u_int32_t refcount,
+    u_int16_t flags,
     int clean)
 {
     StoreEntry *e = NULL;
